--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "cssnext-loader": "^1.0.1",
     "express": "^4.13.3",
     "faker": "^3.0.1",
+    "file-loader": "^0.8.5",
     "fs-extra": "^0.26.2",
     "gh-pages": "^0.6.0",
     "html-webpack-plugin": "^1.7.0",
