--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react": "^0.14.3",
     "react-addons-test-utils": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-highlight-words": "^0.1.1",
     "react-redux": "^4.0.2",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
