Installed from fork of react-highlighter since it is difficult to know how long the PR will take to be merged

--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
   },
   "dependencies": {
     "lodash.debounce": "^3.1.1",
-    "react-highlighter": "^0.2.2",
+    "react-highlighter": "git://github.com/bvaughn/react-highlighter.git",
     "react-json-tree": "^0.4.0",
     "react-pure-render": "^1.0.2",
     "react-responsive": "^1.0.1",
