--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-devtools-filterable-log-monitor",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "Filterable tree view monitor for Redux DevTools",
   "main": "dist/main.js",
   "scripts": {
@@ -106,7 +106,7 @@
   },
   "dependencies": {
     "lodash.debounce": "^3.1.1",
-    "react-highlighter": "git://github.com/bvaughn/react-highlighter.git",
+    "react-highlighter": "^0.2.3",
     "react-json-tree": "^0.4.0",
     "react-pure-render": "^1.0.2",
     "react-responsive": "^1.0.1",
