--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,62 @@
 {
-  "stage": 0,
   "env": {
+    "commonjs": {
+      "presets": [
+        "es2015",
+        "react",
+        "stage-0"
+      ]
+    },
     "development": {
-      "plugins": ["react-transform"],
-      "extra": {
-        "react-transform": {
-          "transforms": [{
-            "transform": "react-transform-hmr",
-            "imports": ["react"],
-            "locals": ["module"]
-          }, {
-            "transform": "react-transform-catch-errors",
-            "imports": ["react", "redbox-react"]
-          }]
-        }
-      }
+      "plugins": [
+        "typecheck",
+        [
+          "react-transform",
+          {
+            "transforms": [
+              {
+                "transform": "react-transform-hmr",
+                "imports": [
+                  "react"
+                ],
+                "locals": [
+                  "module"
+                ]
+              },
+              {
+                "transform": "react-transform-catch-errors",
+                "imports": [
+                  "react",
+                  "redbox-react"
+                ]
+              }
+            ]
+          }
+        ]
+      ],
+      "presets": [
+        "es2015",
+        "react",
+        "stage-0"
+      ]
+    },
+    "es": {
+      "presets": [
+        "es2015-rollup",
+        "react",
+        "stage-0"
+      ]
+    },
+    "production": {
+      "comments": false,
+      "plugins": [
+        "transform-react-inline-elements"
+      ],
+      "presets": [
+        "es2015",
+        "react",
+        "stage-0"
+      ]
     }
   }
 }
