--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "redux-devtools-filterable-log-monitor",
   "version": "0.6.1",
   "description": "Filterable tree view monitor for Redux DevTools",
-  "main": "dist/main.js",
+  "main": "dist/commonjs/index.js",
+  "jsnext:main": "dist/es/index.js",
   "scripts": {
-    "build": "npm run build:demo && npm run build:dist",
+    "build": "npm run build:commonjs && npm run build:es && npm run build:demo && npm run build:umd",
     "build:demo": "npm run clean:demo && NODE_ENV=production webpack --config webpack.config.demo.js -p --bail",
-    "build:dist": "npm run clean:dist && NODE_ENV=production webpack --config webpack.config.dist.js --bail",
-    "clean": "npm run clean:demo && npm run clean:dist",
+    "build:commonjs": "npm run clean:commonjs && cross-env NODE_ENV=production cross-env BABEL_ENV=commonjs babel source --out-dir dist/commonjs",
+    "build:es": "npm run clean:es && cross-env NODE_ENV=production cross-env BABEL_ENV=es babel source --out-dir dist/es",
+    "build:umd": "npm run clean:umd && cross-env NODE_ENV=production webpack --config webpack.config.umd.js --bail",
+    "clean": "npm run clean:commonjs && npm run clean:demo && npm run clean:es && npm run clean:umd",
+    "clean:commonjs": "rimraf dist/commonjs",
     "clean:demo": "rimraf build",
-    "clean:dist": "rimraf dist",
+    "clean:es": "rimraf dist/es",
+    "clean:umd": "rimraf dist/umd",
     "deploy": "gh-pages -d build",
     "lint": "standard",
     "prebuild": "npm run lint",
@@ -55,12 +60,22 @@
   },
   "homepage": "https://github.com/bvaughn/redux-devtools-filterable-log-monitor",
   "devDependencies": {
-    "babel": "^5.8.34",
-    "babel-core": "^5.8.34",
-    "babel-eslint": "^4.1.6",
-    "babel-loader": "^5.4.0",
-    "babel-plugin-react-transform": "^1.1.1",
+    "babel-cli": "6.5.1",
+    "babel-core": "^6.5.1",
+    "babel-eslint": "^5.0.0",
+    "babel-loader": "^6.2.3",
+    "babel-plugin-__coverage__": "^0.1111.1",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-inline-elements": "^6.6.5",
+    "babel-plugin-typecheck": "^3.6.1",
+    "babel-polyfill": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.0.5",
+    "cross-env": "^1.0.7",
     "css-loader": "^0.23.0",
     "cssnext": "^1.8.4",
     "cssnext-loader": "^1.0.1",
@@ -91,7 +106,7 @@
     "redbox-react": "^1.0.1",
     "redux": "^3.0.5",
     "redux-devtools": "^3.0.0",
-    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-dock-monitor": "^1.1.0",
     "reselect": "^2.0.1",
     "rimraf": "^2.4.3",
     "standard": "^5.4.1",
@@ -108,7 +123,6 @@
     "lodash.debounce": "^3.1.1",
     "react-highlighter": "^0.3.0",
     "react-json-tree": "^0.5.1",
-    "react-pure-render": "^1.0.2",
     "react-responsive": "^1.0.1",
     "redux-devtools-themes": "^1.0.0"
   }
