--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-devtools-filterable-log-monitor",
-  "version": "0.6.6",
+  "version": "0.6.7",
   "description": "Filterable tree view monitor for Redux DevTools",
   "main": "dist/commonjs/index.js",
   "jsnext:main": "dist/es/index.js",
@@ -41,6 +41,9 @@
     "searchable",
     "filter",
     "filterable"
+  ],
+  "files": [
+    "dist"
   ],
   "standard": {
     "parser": "babel-eslint",
