--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
   },
   "dependencies": {
     "lodash.debounce": "^3.1.1",
+    "prop-types": "^15.5.10",
     "react-highlighter": "^0.3.2",
     "react-json-tree": "^0.7.3",
     "react-responsive": "^1.1.2",
